--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,8 @@
         android:theme="@style/Theme.YNIKIT"
         tools:targetApi="31">
         <activity
-            android:name=".ISP01"
-            android:exported="false" />
+         android:name=".TestFoAbiturient"
+            android:exported="true" />
         <!-- FileProvider для работы с файлами -->
         <provider
             android:name="androidx.core.content.FileProvider"
